fix(products): images used to overlap text

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,6 @@ a {
 }
 
 img {
-    position: absolute;
     display: block;
     max-width:160px;
     max-height: 160px;
